fix(UI): fixed jumping el.Value

--- a/src/styles/pages/HomePage.css
+++ b/src/styles/pages/HomePage.css
@@ -45,6 +45,7 @@
 	text-align: center;
 	opacity: 0.8;
 	cursor: pointer;
+	color: #333;
 }
 
 .submit-btn:hover {
